# curl-impersonate

./: .gitignore  Dockerfile  Dockerfile.chrome  Dockerfile.template  INSTALL.md  LICENSE  Makefile  Makefile.in  README.md  browsers.json  configure  configure.ac  curl-http2-d.patch  curl-lib-nss.patch  curl-openssl.patch  curl-static-libnss.patch  curl_chrome98  curl_ff91esr  curl_ff95  generate_dockerfiles.sh
.github/workflows/: build-and-test-docker.yml  build-and-test-make.yml  build-and-test.yml  build-win.yaml  publish-docker-image.yml
chrome/: Dockerfile  Dockerfile.alpine  curl_chrome100  curl_chrome101  curl_chrome104  curl_chrome107  curl_chrome109  curl_chrome110  curl_chrome116  curl_chrome117  curl_chrome118  curl_chrome119  curl_chrome120  curl_chrome98  curl_chrome99  curl_chrome99_android  curl_edge101  curl_edge98  curl_edge99  curl_safari15_3  curl_safari15_5  curl_safari17_0  curl_safari17_2_ios
chrome/patches/: boringssl-old-ciphers.patch  curl-configure.patch  curl-http-h.patch  curl-http2-c.patch  curl-impersonate.patch  curl-multi-c.patch  libnghttp2-pc.patch
docs/: 01_GETTING_STARTED.md  02_USAGE.md  03_LIBCURL_IMPERSONATE.md  03_LIBCURL_IMPERSONATE_JS.md  03_LIBCURL_IMPERSONATE_PHP.md  03_LIBCURL_IMPERSONATE_PYTHON.md  04_LIBCURL_IMPERSONATE_PY.md  README.md
firefox/: Dockerfile  Dockerfile.alpine  curl_ff100  curl_ff102  curl_ff109  curl_ff117  curl_ff91esr  curl_ff95  curl_ff98
firefox/patches/: curl-CVE-2023-38545.patch  curl-http2-c.patch  curl-impersonate.patch  curl-lib-nss.patch
tests/: Dockerfile  README.md  conftest.py  minicurl.c  requirements.txt  signature.py  signatures.yaml  targets.yaml  test_impersonate.py
tests/signatures/: README.md  chrome.yaml  chrome_100.0.4896.127_win10.yaml  chrome_101.0.4951.67_win10.yaml  chrome_104.0.5112.81_win10.yaml  chrome_107.0.5304.107_win10.yaml  chrome_110.0.5481.177_win10.yaml  chrome_116.0.5845.180_win10.yaml  chrome_118.0.5993.117_linux.yaml  chrome_119.0.6045.123_linux.yaml  chrome_119.0.6045.199_macOS.yaml  chrome_120.0.6099.109_macOS.yaml  chrome_120.0.6099.71_linux.yaml  chrome_98.0.4758.102_win10.yaml  chrome_99.0.4844.51_win10.yaml  chrome_99.0.4844.73_android12-pixel6.yaml  edge.yaml  edge_101.0.1210.47_win10.yaml  edge_118.0.2088.76_linux.yaml  edge_119.0.2151.97_linux.yaml  edge_120.0.2210.61_linux.yaml  edge_98.0.1108.62_win10.yaml  edge_99.0.1150.30_win10.yaml  firefox.yaml  firefox_100.0_win10.yaml  firefox_102.0_win10.yaml  firefox_109.0_win10.yaml  firefox_117.0.1_win10.yaml  firefox_118.0.2_linux.yaml  firefox_119.0.1_linux.yaml  firefox_120.0.1_linux.yaml  firefox_91.6.0esr_win10.yaml  firefox_95.0.2_win10.yaml  firefox_98.0_win10.yaml  safari.yaml  safari_15.3_macos11.6.4.yaml  safari_15.5_macos12.4.yaml  safari_17.0_macOS.yaml  safari_17.2_iOS.yaml
tests/ssl/: dhparam.pem  server.crt  server.key
win/: build.sh  dll2lib.bat
zigshim/: ar  cc  cxx
